--- a/src/extensions/inspector/content.css
+++ b/src/extensions/inspector/content.css
@@ -104,7 +104,7 @@
     top: 0;
     left: 0;
     padding: 0px 4px;
-    background: #3a4955;
+    background: #8885;
     font-size: 10px;
     opacity: .75;
 }
