--- a/src/extensions/inspector/content.css
+++ b/src/extensions/inspector/content.css
@@ -56,6 +56,37 @@
 .discovery-inspect-details-popup .content-section.config {
     --header: 'Config';
 }
+.discovery-inspect-details-popup .content-section.props .transition-fn {
+    position: relative;
+    padding: 16px 0 0 4px;
+    margin: -4px 0 -4px 11px;
+    border-left: 1px solid #888;
+}
+.discovery-inspect-details-popup .content-section.props .transition-fn .view-source__content {
+    padding-bottom: 6px;
+}
+.discovery-inspect-details-popup .content-section.props .transition-fn::before {
+    content: "";
+    position: absolute;
+    left: -4px;
+    top: -2px;
+    width: 7px;
+    height: 7px;
+    border: 3.5px solid transparent;
+    border-top: none;
+    border-bottom: 7px solid #888;
+    box-sizing: border-box;
+}
+.discovery-inspect-details-popup .content-section.props .transition-fn::after {
+    content: 'Normalize (view.options.props)';
+    position: absolute;
+    top: 5px;
+    left: 0;
+    padding: 0px 4px;
+    background: #8885;
+    font-size: 10px;
+    opacity: .75;
+}
 .discovery-inspect-details-popup .content-section.config > .view-tree {
     margin-left: 6px;
 }
