Fix padding for the first line of selection

--- a/src/views/editor/editors.css
+++ b/src/views/editor/editors.css
@@ -44,7 +44,8 @@
     cursor: text;
 }
 
-.discovery-view-editor .CodeMirror .CodeMirror-line {
+.discovery-view-editor .CodeMirror .CodeMirror-line,
+.discovery-view-editor .CodeMirror .CodeMirror-line-like {
     padding: 0;
 }
 
