--- a/src/pages/discovery.css
+++ b/src/pages/discovery.css
@@ -1,7 +1,7 @@
-@import url('./discover/header.css');
-@import url('./discover/editor-common.css');
-@import url('./discover/editor-query.css');
-@import url('./discover/editor-view.css');
+@import url('./discovery/header.css');
+@import url('./discovery/editor-common.css');
+@import url('./discovery/editor-query.css');
+@import url('./discovery/editor-view.css');
 
 .page-discovery {
     padding-top: 20px !important;
