--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,3 @@
 @import url('./default.css');
-@import url('./discover.css');
+@import url('./discovery.css');
 @import url('./views-showcase.css');
